compiler/tests/fixtures/valid/action_with_report.viv
// Action with a report field (template string)

action discover:
    roles:
        @explorer:
            as: initiator
        @place:
            as: location
    report: "@explorer discovered @place"
