compiler/tests/fixtures/invalid/semantics/non_character_role_with_participation_mode.viv
// Invalid: non-character role with participation mode

action bad-mode:
    roles:
        @actor:
            as: initiator
        @place:
            as: location, observe
